# sandstone-technical

./: .gitignore  INFRA.md  INTERVIEW.md  Makefile  README.md  SCOPING.md
.cursor/rules/: backend-design.md
apps/api/: main.py  pyproject.toml
apps/api/app/db/: __init__.py  schemas.py  store.py
apps/api/app/models/: __init__.py  schemas.py
apps/api/app/routes/: documents.py
apps/api/app/services/: content_extraction.py  schemas.py
apps/api/tests/: test_content_extraction.py
apps/api/tests/fixtures/: README.md
apps/backend/: Makefile  pyproject.toml
apps/backend/app/: app.py
apps/backend/app/core/: config.py  deps.py  exception_handlers.py
apps/backend/app/db/: schemas.py  store.py
apps/backend/app/models/: api.py  errors.py
apps/backend/app/routes/: documents.py
apps/backend/app/routes/utils/: formatting.py  mappers.py
apps/backend/app/services/: documents.py  extraction_utils.py  search.py
apps/backend/scripts/: seed.py
apps/backend/seed_docs/: loan_agreement_template.docx  sandstone_dumbo_loan_agreement.docx  sandstone_omaha_loan_agreement.docx
apps/backend/tests/: test_create_from_template.py  test_delete_document.py  test_document_edit.py  test_performance_benchmarks.py  test_search_service.py
apps/web/: package-lock.json  package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/document/[id]/: page.tsx
apps/web/components/: bug-report-fab.tsx  document-editor.tsx  search-bar.tsx  search-panel.tsx  template-list.tsx  top-tabs.tsx
apps/web/hooks/: use-documents.ts
apps/web/lib/: diff-content.ts  documents.ts
